<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="@dimen/dimen_10"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/iv_close"
    android:padding="@dimen/dimen_10">

    <com.hungerbox.customer.util.view.HbTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MediumTextView"
        android:textColor="@color/colorAccent"
        android:text="@string/slot_booking_title_inactive"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <com.hungerbox.customer.util.view.HbTextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/NormalTextView"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0"
        android:textSize="@dimen/small_text"
        android:textColor="@color/light_black"
        android:text="@string/slot_booking_sub_title_inactive"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_time"
        />

    <com.hungerbox.customer.util.view.HbTextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/NormalTextView"
        tools:text="22:55 PM "
        android:textSize="@dimen/small_text"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="@dimen/dimen_4"
        android:layout_marginRight="@dimen/dimen_4"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintLeft_toRightOf="@+id/tv_subtitle"
        app:layout_constraintRight_toLeftOf="@+id/barrier"/>

    <Button
        android:id="@+id/bt_book"
        style="@style/SmallRoundedAccentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot_booking_button_inactive"
        android:visibility="visible"
        android:layout_marginRight="@dimen/dimen_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_qr_slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:srcCompat="@drawable/qr_disabled"
        android:layout_marginRight="@dimen/dimen_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="iv_qr_slot,bt_book"
        app:barrierDirection="left"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>